--- a/src/app/account/auth/login/login.component.html
+++ b/src/app/account/auth/login/login.component.html
@@ -47,16 +47,16 @@
                     <div *ngIf="f.password.errors.required">Password is required</div>
                   </div>
                 </div>
-
+<!--
                 <div class="form-check">
                     <input type="checkbox" class="form-check-input" id="auth-remember-check">
                     <label class="form-check-label" for="auth-remember-check">Remember me</label>
                 </div>
-                
+                -->
                 <div class="mt-3 text-end">
                     <button class="btn btn-primary w-sm waves-effect waves-light" type="submit">Log In</button>
                 </div>
-                <div class="mt-4 text-center">
+                <!--<div class="mt-4 text-center">
                   <div class="signin-other-title">
                       <h5 class="font-size-14 mb-3 title">Sign in with</h5>
                   </div>
@@ -82,7 +82,7 @@
 
                 <div class="mt-4 text-center">
                     <p class="mb-0">Don't have an account ? <a href="/account/signup" class="fw-medium text-primary"> Signup now </a> </p>
-                </div>
+                </div> -->
               </form>
             </div>
 
@@ -91,7 +91,7 @@
         </div>
 
         <div class="mt-5 text-center">
-          <p>© {{year}} Minible. Crafted with <i class="mdi mdi-heart text-danger"></i> by Themesbrand</p>
+          <p>2021 © IT HUB Inc.</p>
         </div>
 
       </div>
