--- a/src/app/account/auth/login/login.component.html
+++ b/src/app/account/auth/login/login.component.html
@@ -37,9 +37,9 @@
                 </div>
 
                 <div class="mb-3">
-                  <div class="float-end">
+                 <!-- <div class="float-end">
                       <a href="/account/reset-password" class="text-muted">Forgot password?</a>
-                  </div>
+                  </div>-->
                   <label for="password">Password</label>
                   <input type="password" formControlName="password" class="form-control" id="password"
                     [ngClass]="{ 'is-invalid': submitted && f.password.errors }" placeholder="Password" />
