--- a/src/app/layouts/topbar/topbar.component.html
+++ b/src/app/layouts/topbar/topbar.component.html
@@ -27,7 +27,7 @@
         <i class="fa fa-fw fa-bars"></i>
       </button>
       <div class="logo_text">
-        Practice Management Software (PMS)
+        <p>Practice Management Software (PMS)</p>
       </div>
       <!-- App Search-->
       <!-- <form class="app-search d-none d-lg-block">
