--- a/src/app/pages/dashboards/default/default.component.html
+++ b/src/app/pages/dashboards/default/default.component.html
@@ -12,8 +12,7 @@
 
                     <div class="text-left">
                         <p class="font-16 text-muted mb-2"></p>
-                        <p class="text-muted">Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero
-                            venenatis faucibus tincidunt.</p>
+                        <p class="text-muted">Start adding patients. Add first patient to your clinic, and then proceed to add appointments, bills, prescriptions for the patient</p>
                         <a href="javascript:void(0);" class="btn btn-light text-reset font-16">Add First Patient </a>
                     </div>
 
