--- a/src/app/pages/form/editor/editor.component.html
+++ b/src/app/pages/form/editor/editor.component.html
@@ -1,15 +1,15 @@
 <div class="container-fluid">
 
   <!-- start page title -->
-  <app-page-title title="Form Editor" [breadcrumbItems]="breadCrumbItems"></app-page-title>
+  <app-page-title title="Patient Notes" [breadcrumbItems]="breadCrumbItems"></app-page-title>
   <!-- end page title -->
 
   <div class="row">
     <div class="col-12">
       <div class="card">
         <div class="card-body">
-            <h4 class="card-title">CK Editor</h4>
-            <ckeditor [editor]="Editor" data="<p>Content of the editor.</p>"></ckeditor>
+            <!--<h4 class="card-title">CK Editor</h4>-->
+            <ckeditor [editor]="Editor" data="<p></p>"></ckeditor>
         </div>
       </div>
     </div>
