Practice Management Software

--- a/src/app/layouts/topbar/topbar.component.html
+++ b/src/app/layouts/topbar/topbar.component.html
@@ -27,7 +27,13 @@
         <i class="fa fa-fw fa-bars"></i>
       </button>
       <div class="logo_text">
-        <p>Practice Management Software (PMS)</p>
+        <p>Practice Management Software (PMS 1.0)</p>
+        <img src="http://www.ithubusa.com/images/logo.png" style="width: 120px;
+        margin-top: -19px;
+        margin-right: -20px;
+        height: 28px;
+        float: right;
+    "/>
       </div>
       <!-- App Search-->
       <!-- <form class="app-search d-none d-lg-block">
