New Pages Added

--- a/src/app/account/auth/login/login.component.html
+++ b/src/app/account/auth/login/login.component.html
@@ -91,7 +91,7 @@
         </div>
 
         <div class="mt-5 text-center">
-          <p>2021 © IT HUB Inc.</p>
+         <!-- <p>2021 © IT HUB Inc.</p>-->
         </div>
 
       </div>
